remove football album

--- a/football.html
+++ b/football.html
@@ -76,7 +76,7 @@ div.Section1
   <tbody><tr>
     <td width="5%"><!--DWLayoutEmptyCell-->&nbsp;</td>
   	<td valign="top" width="90%">
-		<p class="title"><strong>Football career </strong> (<b><a href="fbalbum.html">Album</a></b>) </p>
+		<p class="title"><strong>Career </strong></p>
 	
 					  <div align="justify"> <font size="3" face="Times New Roman">2004-2005 Premier Football League of Nanjing University, Team CS, semi-final (<b>best</b> in the department history). </font></div>
 					  <p> </p>
