remove dead links

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@ where I got to know a girl who later became my wife. I <a href="travel.html" tar
 						<TR>
 						  <TD class=content_title>&nbsp;</TD>
 					      <TD class=content width="96%">
-							<p class="STYLE12" style="margin-top: 5px; margin-bottom: 5px"><span style="font-size:11pt;mso-bidi-font-size:12.0pt; mso-fareast-font-family:;mso-bidi-font-family:&quot;Times New Roman&quot;;mso-font-kerning: 1.0pt;mso-ansi-language:EN-US;mso-fareast-language:ZH-CN;mso-bidi-language: AR-SA"> soccer (<a href="football.html">career</a> | <a href="fbalbum.html">album</a>); <a href="travel.html">travel</a>; <a href="https://www.youtube.com/watch?v=gAh9NRGNhUU">rock</a>; biking; drinking; reading; movies; turtles</span></p>
+							<p class="STYLE12" style="margin-top: 5px; margin-bottom: 5px"><span style="font-size:11pt;mso-bidi-font-size:12.0pt; mso-fareast-font-family:;mso-bidi-font-family:&quot;Times New Roman&quot;;mso-font-kerning: 1.0pt;mso-ansi-language:EN-US;mso-fareast-language:ZH-CN;mso-bidi-language: AR-SA"> soccer (<a href="football.html">career</a>); <a href="travel.html">travel</a>; <a href="https://www.youtube.com/watch?v=gAh9NRGNhUU">rock</a>; biking; drinking; reading; movies; turtles</span></p>
 					</TD>
 					<TD class=content_title>&nbsp;</TD>
 					  </TR>
