update the old, ugly tags

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   })();
 
 </script>
-<META content="Tianyin Xu,computer networks" name="keywords">
+<META content="Tianyin Xu,computer systems and networks" name="keywords">
 <META http-equiv=Content-Type content="text/html; charset=utf-8">
 <META http-equiv=Refresh content=1800>
 <META content="MSHTML 6.00.2900.2096" name=GENERATOR>
