remove the statements and add the disseration

--- a/index.html
+++ b/index.html
@@ -208,7 +208,8 @@ Department of Computer Science and Engineering
 University of California, San Diego
 9500 Gilman Drive, MC 0404
 La Jolla, CA 92093-0404
-Email: tixu at cs dot ucsd dot edu
+[Email] tixu at cs dot ucsd dot edu
+[CV] <a href="job_search/xu.cv.pdf" target="_blank">pdf</a>
 </pre></TD>
 
   <TD width="417" rowspan="2" align=right vAlign=top><div align="left"></div></TD>
@@ -264,16 +265,9 @@ Email: tixu at cs dot ucsd dot edu
                     <TABLE width="100%" border=0 cellPadding=0 cellSpacing=0 bgcolor="#FFFFFF" id=Table6>
                       <TBODY>
 						  <TR>
-						  <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px; line-height:150%;"><span class="style121"><A name=researchint id="researchint"></A></span><b>$ echo <font color="#FA6300">"I will <a href="https://cs.illinois.edu/news/cs-illinois-welcomes-eight-new-faculty", target="_blank">join</a> CS @ UIUC as an Assistant Professor in Fall 2018."</font></b><br><b>$ echo<font color="#3b5998"> "I will be a Visiting Scientist @ Facebook's Core Systems team before then."</font></b><br> <b>$ echo<font color="#006A96"> "I will be defending my Ph.D. thesis on 8/29/17."</font></b> </span></TD>
+						  <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px; line-height:150%;"><span class="style121"><A name=researchint id="researchint"></A></span><b>$ echo <font color="#FA6300">"I will <a href="https://cs.illinois.edu/news/cs-illinois-welcomes-eight-new-faculty", target="_blank">join</a> CS @ UIUC as an Assistant Professor in Fall 2018."</font></b><br><b>$ echo<font color="#3b5998"> "I will be a Visiting Scientist @ Facebook's Core Systems team before then."</font></b><br> <b>$ echo<font color="#006A96"> "I will be defending my Ph.D. thesis (<a href="papers/dissertation.pdf" target="_blank">pdf</a>) on 8/29/17."</font></b> </span></TD>
                           </TR>
-						  <TR>
-                          <TD class=content_title>&nbsp;</TD>
-					      <TD class=content width="96%">
-	<p class="STYLE12" style="margin-top: 5px; margin-bottom: 5px"><span style="font-size:11pt;mso-bidi-font-size:12.0pt; mso-fareast-font-family:;mso-bidi-font-family:&quot;Times New Roman&quot;;mso-font-kerning: 1.0pt;mso-ansi-language:EN-US;mso-fareast-language:ZH-CN;mso-bidi-language: AR-SA">
-                           [<a href="job_search/xu.cv.pdf" target="_blank">Curriculum Vitae</a>]&nbsp; [<a href="job_search/xu.research.pdf" target="_blank">Research Statement</a>]&nbsp; [<a href="job_search/xu.teaching.pdf" target="_blank">Teaching Statement</a>]</span></p>
-						  </TD>
-                          </TR>
-		          <TD width="0.5%">&nbsp;</TD>
+							          <TD width="0.5%">&nbsp;</TD>
 
 
                         <TR>
