--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ La Jolla, CA 92093-0404
                     <TABLE width="100%" border=0 cellPadding=0 cellSpacing=0 bgcolor="#FFFFFF" id=Table6>
                       <TBODY>
 						  <TR>
-						  <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px; line-height:150%;"><span class="style121"><A name=researchint id="researchint"></A></span><b>$ echo <font color="#FA6300">"I will <a href="https://cs.illinois.edu/news/cs-illinois-welcomes-eight-new-faculty", target="_blank">join</a> CS @ UIUC as an Assistant Professor in Fall 2018."</font></b><br><b>$ echo<font color="#3b5998"> "I will be a Visiting Scientist @ Facebook's Core Systems team before then."</font></b><br> <b>$ echo<font color="#006A96"> "I will be defending my Ph.D. thesis (<a href="papers/dissertation.pdf" target="_blank">pdf</a>) on 8/29/17."</font></b> </span></TD>
+						  <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px; line-height:150%;"><span class="style121"><A name=researchint id="researchint"></A></span><b>$ echo <font color="#FA6300">"I will <a href="https://cs.illinois.edu/news/cs-illinois-welcomes-eight-new-faculty", target="_blank">join</a> CS @ UIUC as an Assistant Professor in Fall 2018."</font></b><br><b>$ echo<font color="#3b5998"> "I will be a Visiting Scientist @ Facebook's Core Systems before joining UIUC."</font></b><br> <b>$ echo<font color="#006A96"> "I will be defending my Ph.D. thesis (<a href="papers/dissertation.pdf" target="_blank">pdf</a>) on 8/29/17."</font></b> </span></TD>
                           </TR>
 							          <TD width="0.5%">&nbsp;</TD>
 
