--- a/publication.html
+++ b/publication.html
@@ -79,6 +79,13 @@ div.Section1
 				
 			<blockquote>
 
+			<div align="justify">
+                        <div align="justify" class="STYLE4">
+                        <p><span style="font-size: 12pt; font-family: Times New Roman;"><strong>How Do System Administrators Resolve Access-Denied Issues in the Real World? </strong> [<a href="papers/chi17.pdf">pdf</a> | <a href="papers/chi17.ps">ps</a> | <a href="papers/chi17.bib">bib</a>] </span> <br> Tianyin Xu, Han Min Naing, Le Lu, and Yuanyuan Zhou <br> In Proceedings of the 35th Annual CHI Conference on Human Factors in Computing Systems (<font color="#083b89"><b>CHI'17</b></font>), Denver, CO, May 6-11, 2017.    
+                        </div>
+                        </div>
+		        <p></p>
+
                        	<div align="justify">
                         <div align="justify" class="STYLE4">
                         <p><span style="font-size: 12pt; font-family: Times New Roman;"><strong>How Do System Administrators Resolve Access-Denied Issues in the Real World? </strong> [<a href="papers/chi17.pdf">pdf</a> | <a href="papers/chi17.ps">ps</a> | <a href="papers/chi17.bib">bib</a>] </span> <br> Tianyin Xu, Han Min Naing, Le Lu, and Yuanyuan Zhou <br> In Proceedings of the 35th Annual CHI Conference on Human Factors in Computing Systems (<font color="#083b89"><b>CHI'17</b></font>), Denver, CO, May 6-11, 2017.    
@@ -131,11 +138,17 @@ div.Section1
 		<blockquote>
 			<div align="justify">
                         <div align="justify" class="STYLE4">
-                        <p><span style="font-size: 12pt; font-family: Times New Roman;"> <strong>DefDroid: Towards a More Defensive Mobile OS Against Disruptive App Behavior</strong> [<a href="papers/mobisys16.pdf">pdf</a> | <a href="papers/mobisys16.ps">ps</a> | <a href="papers/mobisys16.bib">bib</a>] <br>Peng Huang, Tianyin Xu, Xinxin Jin, and Yuanyuan Zhou<br> In Proceedings of the 14th International Conference on Mobile Systems, Applications, and Services (<font color="#083b89"><b>MobiSys'16</b></font>), Singapore, Singapore, Jun. 26-30, 2016. </span></p>
+                        <p><span style="font-size: 12pt; font-family: Times New Roman;"> <strong>Towards Web-based Delta Synchronization for Cloud Storage Services</strong> [to appear] <br>He Xiao, Zhenhua Li, Ennan Zhai, Tianyin Xu, Yang Li, Yonghe Wang, Quanlu Zhang, and Yao Liu<br> In Proceedings of the 16th USENIX Conference on File and Storage Technologies (<font color="#083b89"><b>FAST'18</b></font>), Oakland, CA, Feb. 12-15, 2018. <br> *An early version ([<a href="papers/hotstorage17.pdf">pdf</a> | <a href="papers/hotstorage17.ps">ps</a> | <a href="papers/hotstorage17.bib">bib</a>]) appears at the 9th USENIX Workshop on Hot Topics in Storage and File Systems (<font color="#083b89"><b>HotStorage'17</b></font>).</span></p>
                         </div>
                         </div>
 		        <p></p>
 
+			<div align="justify">
+                        <div align="justify" class="STYLE4">
+                        <p><span style="font-size: 12pt; font-family: Times New Roman;"> <strong>DefDroid: Towards a More Defensive Mobile OS Against Disruptive App Behavior</strong> [<a href="papers/mobisys16.pdf">pdf</a> | <a href="papers/mobisys16.ps">ps</a> | <a href="papers/mobisys16.bib">bib</a>] <br>Peng Huang, Tianyin Xu, Xinxin Jin, and Yuanyuan Zhou<br> In Proceedings of the 14th International Conference on Mobile Systems, Applications, and Services (<font color="#083b89"><b>MobiSys'16</b></font>), Singapore, Singapore, Jun. 26-30, 2016. </span></p>
+                        </div>
+                        </div>
+		        <p></p>
 			<div align="justify">
                         <div align="justify" class="STYLE4">
                         <p><span style="font-size: 12pt; font-family: Times New Roman;"> <strong>NChecker: Saving Mobile App Developers from Network Disruptions</strong> [<a href="papers/eurosys16.pdf">pdf</a> | <a href="papers/eurosys16.ps">ps</a> | <a href="papers/eurosys16.bib">bib</a>]<br>Xinxin Jin, Peng Huang, Tianyin Xu, and Yuanyuan Zhou<br> In Proceedings of the 11th ACM European Conference on Computer Systems (<font color="#083b89"><b>EuroSys'16</b></font>), London, UK, Apr. 18-21, 2016. </span></p>
