--- a/publication.html
+++ b/publication.html
@@ -132,7 +132,14 @@ div.Section1
 		<blockquote>
 			<div align="justify">
                         <div align="justify" class="STYLE4">
-                        <p><span style="font-size: 12pt; font-family: Times New Roman;"> <strong>Towards Web-based Delta Synchronization for Cloud Storage Services</strong> [to appear] <br>He Xiao, Zhenhua Li, Ennan Zhai, Tianyin Xu, Yang Li, Yonghe Wang, Quanlu Zhang, and Yao Liu<br> In Proceedings of the 16th USENIX Conference on File and Storage Technologies (<font color="#083b89"><b>FAST'18</b></font>), Oakland, CA, Feb. 12-15, 2018. <br> *An early version ([<a href="papers/hotstorage17.pdf">pdf</a> | <a href="papers/hotstorage17.ps">ps</a> | <a href="papers/hotstorage17.bib">bib</a>]) appears at the 9th USENIX Workshop on Hot Topics in Storage and File Systems (<font color="#083b89"><b>HotStorage'17</b></font>).</span></p>
+                        <p><span style="font-size: 12pt; font-family: Times New Roman;"> <strong>Mining Container Image Repositories ---MSR for Software Configurations and Beyond</strong> [to appear] <br>Tianyin Xu and Darko Marinov<br> In Proceedings of the 40th International Conference on Software Engineering, New Ideas and Emerging Results (<font color="#083b89"><b>ICSE'18, NIER</b></font>), Gothenburg, Sweden, May 27-Jun. 3, 2018.</span></p>
+                        </div>
+                        </div>
+		        <p></p>
+
+			<div align="justify">
+                        <div align="justify" class="STYLE4">
+                        <p><span style="font-size: 12pt; font-family: Times New Roman;"> <strong>Towards Web-based Delta Synchronization for Cloud Storage Services</strong> [to appear] <br>He Xiao, Zhenhua Li, Ennan Zhai, Tianyin Xu, Yang Li, Yonghe Wang, Quanlu Zhang, and Yao Liu<br> In Proceedings of the 16th USENIX Conference on File and Storage Technologies (<font color="#083b89"><b>FAST'18</b></font>), Oakland, CA, Feb. 12-15, 2018. <br> *An early version ([<a href="papers/hotstorage17.pdf">pdf</a> | <a href="papers/hotstorage17.ps">ps</a> | <a href="papers/hotstorage17.bib">bib</a>]) appears at <font color="#083b89"><b>HotStorage'17</b></font>.</span></p>
                         </div>
                         </div>
 		        <p></p>
