--- a/publication.html
+++ b/publication.html
@@ -132,7 +132,7 @@ div.Section1
 		<blockquote>
 			<div align="justify">
                         <div align="justify" class="STYLE4">
-                        <p><span style="font-size: 12pt; font-family: Times New Roman;"> <strong>Mining Container Image Repositories for Software Configurations and Beyond</strong> [to appear] <br>Tianyin Xu and Darko Marinov<br> In Proceedings of the 40th International Conference on Software Engineering, New Ideas and Emerging Results (<font color="#083b89"><b>ICSE'18, NIER</b></font>), Gothenburg, Sweden, May 27-Jun. 3, 2018.</span></p>
+                        <p><span style="font-size: 12pt; font-family: Times New Roman;"> <strong>Mining Container Image Repositories for Software Configurations and Beyond</strong> [<a href="papers/icse-nier18.pdf">pdf</a> | <a href="papers/icse-nier18.ps">ps</a> | <a href="papers/icse-nier18.bib">bib</a>] <br>Tianyin Xu and Darko Marinov<br> In Proceedings of the 40th International Conference on Software Engineering, New Ideas and Emerging Results (<font color="#083b89"><b>ICSE'18, NIER</b></font>), Gothenburg, Sweden, May 27-Jun. 3, 2018.</span></p>
                         </div>
                         </div>
 		        <p></p>
