--- a/publication.html
+++ b/publication.html
@@ -139,7 +139,7 @@ div.Section1
 
 			<div align="justify">
                         <div align="justify" class="STYLE4">
-                        <p><span style="font-size: 12pt; font-family: Times New Roman;"> <strong>Towards Web-based Delta Synchronization for Cloud Storage Services</strong> [to appear] <br>He Xiao, Zhenhua Li, Ennan Zhai, Tianyin Xu, Yang Li, Yonghe Wang, Quanlu Zhang, and Yao Liu<br> In Proceedings of the 16th USENIX Conference on File and Storage Technologies (<font color="#083b89"><b>FAST'18</b></font>), Oakland, CA, Feb. 12-15, 2018. <br> *An early version ([<a href="papers/hotstorage17.pdf">pdf</a> | <a href="papers/hotstorage17.ps">ps</a> | <a href="papers/hotstorage17.bib">bib</a>]) appears at <font color="#083b89"><b>HotStorage'17</b></font>.</span></p>
+                        <p><span style="font-size: 12pt; font-family: Times New Roman;"> <strong>Towards Web-based Delta Synchronization for Cloud Storage Services</strong> [<a href="papers/fast18.pdf">pdf</a> | <a href="papers/fast18.ps">ps</a> | <a href="papers/fast18.bib">bib</a>] <br>He Xiao, Zhenhua Li, Ennan Zhai, Tianyin Xu, Yang Li, Yonghe Wang, Quanlu Zhang, and Yao Liu<br> In Proceedings of the 16th USENIX Conference on File and Storage Technologies (<font color="#083b89"><b>FAST'18</b></font>), Oakland, CA, Feb. 12-15, 2018. <br> *An early version ([<a href="papers/hotstorage17.pdf">pdf</a> | <a href="papers/hotstorage17.ps">ps</a> | <a href="papers/hotstorage17.bib">bib</a>]) appears at <font color="#083b89"><b>HotStorage'17</b></font>.</span></p>
                         </div>
                         </div>
 		        <p></p>
