--- a/travel.html
+++ b/travel.html
@@ -357,7 +357,9 @@ div.Section1
                                                 </li>										  
 						<li><font color="#083b89"><b>United States</b></font>: 
                                                   <ul style="list-style-type:circle">
+						     <li>Alexandria, VA (2018) </li>
                                                      <li>Annapolis, MD (2017) </li>
+					             <li>Arlington, VA (2018) </li>
                                                      <li>Atlanta, GA (2017) </li>
                                                      <li>Baltimore, MD (2017) </li>
                                                      <li>Berkeley, CA (2015) </li>
