--- a/travel.html
+++ b/travel.html
@@ -362,16 +362,19 @@ div.Section1
 					             <li>Arlington, VA (2018) </li>
                                                      <li>Atlanta, GA (2017) </li>
                                                      <li>Baltimore, MD (2017) </li>
-                                                     <li>Berkeley, CA (2015) </li>
+                                                     <li>Berkeley, CA (2015, 2018) </li>
                                                      <li>Big Sur, CA (2017) </li>
                                                      <li>Broomfield, CO (2014) </li>
                                                      <li>Carmel-by-the-Sea, CA (2017) </li>
                                                      <li>Denver, CO (2017) </li>
                                                      <li>Farmington, PA (2013) </li>
+					             <li>Fremont, CA (2017-2018) </li>
                                                      <li>Irvine, CA (2016) </li>
                                                      <li>Los Angeles, CA (2012, 2016) </li>
+						     <li>Menlo Park, CA (2017-2018) </li>
                                                      <li>Monterey, CA (2015) </li>
                                                      <li>Morro Bay, CA (2017) </li>
+						     <li>Newark, CA (2017-2018) </li>
                                                      <li>New York City, NY (2017) </li>
                                                      <li>Pasadena, CA (2015) </li>
                                                      <li>San Diego, CA (phd, 2011-2017) </li>
