--- a/travel.html
+++ b/travel.html
@@ -384,6 +384,7 @@ div.Section1
                                                      <li>Santa Clara, CA (too many) </li>
                                                      <li>Santa Cruz, CA (2017) </li>
                                                      <li>Santa Maria, CA (2017) </li>
+						     <li>Saratoga, CA (2018) </li>
                                                      <li>Savannah, GA (2016) </li>
                                                      <li>Solvang, CA (2017) </li>
                                                      <li>State College, PA (2017) </li>
