--- a/travel.html
+++ b/travel.html
@@ -269,7 +269,6 @@ div.Section1
                                                      <li>Kyoto (2009) </li>
                                                      <li>Osaka (2009) </li>
                                                      <li>Nagoya (2009) </li>
-                                                     <li>Mount Fuji (2009) </li>
                                                      <li>Tokyo (2009) </li>
                                                   </ul>
                                                 </li>
@@ -357,6 +356,7 @@ div.Section1
                                                 </li>										  
 						<li><font color="#083b89"><b>United States</b></font>: 
                                                   <ul style="list-style-type:circle">
+						     <li>Aberdeen, WA (2018) <li>
 						     <li>Alexandria, VA (2018) </li>
                                                      <li>Annapolis, MD (2017) </li>
 					             <li>Arlington, VA (2018) </li>
@@ -386,6 +386,7 @@ div.Section1
                                                      <li>Santa Maria, CA (2017) </li>
 						     <li>Saratoga, CA (2018) </li>
                                                      <li>Savannah, GA (2016) </li>
+						     <li>Seattle, WA (2018) <li>
                                                      <li>Solvang, CA (2017) </li>
                                                      <li>State College, PA (2017) </li>
                                                      <li>Sunnyvale, CA (2012, 2015) </li>
