--- a/cs598-fa18/cs598-fall18.html
+++ b/cs598-fa18/cs598-fall18.html
@@ -30,7 +30,7 @@
         <dd>
             Tu/Th 14:00–15:15pm
             <br>
-            <a href="https://maps.ucsd.edu/map/?id=1005&amp;mrkIid=237174">1103 Siebel Center</a>
+            1103 Siebel Center
         </dd>
         <p></p>
         <dt><b>Office Hours</b></dt>
