--- a/cs598-fa18/index.html
+++ b/cs598-fa18/index.html
@@ -45,9 +45,9 @@
 
     <p>
         The purpose of this course is to teach the principles and practices of
-        reliability engineering in modern "cloud-scale" systems, and expose the
+        reliability engineering in modern "cloud-scale" systems, and expose
         students to the research of software and system reliability.
-        In this course, we will look at how large-scale systems fail in the
+        We will look at how large-scale systems fail in the
         real world, and we will study the state-of-the-art reliability
         techniques and practices, including those widely adopted in industry
         and new ideas proposed by academia.
@@ -141,7 +141,7 @@
         You are expected to be aware of UIUC's
         <a href="http://studentcode.illinois.edu/article1_part4_1-401.html">academic
           integrity guidelines</a>. Any violation of the course or university policies
-          will be treated very seriously, and could lead to severe repercussions.
+          will be treated seriously, and could lead to severe repercussions.
           Don't cheat. It's not worth it.
     </p>
 
