--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -705,7 +705,7 @@
             </tbody>
         </table>
 
-        <h2>Reliability Auditing</h2>
+        <h2>Auditing</h2>
 
         <table>
             <tbody>
@@ -788,7 +788,7 @@
                     <td class="papers">
 
                         <ul>
-                            <li> TBD </li>
+                            <li> TBA </li>
                         </ul>
 
                     </td>
