--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -805,7 +805,7 @@
                     <td class="papers">
 
                         <ul>
-                            <li> <font color="red"><b>Present the projects</b></font>
+                            <li> <font color="red"><b>Project presentation</b></font>
                             </li>
                         </ul>
 
