--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -149,7 +149,7 @@
                     <td class="papers">
                         <ul>
                             <li> H. S. Gunawi, M. Hao, R. O. Suminto, A. Laksono,
-                              A. D. Satria, Jeffry Adityatama, and K. J. Eliazar,
+                              A. D. Satria, J. Adityatama, and K. J. Eliazar,
                                 <a class="paperlink" href="http://ucare.cs.uchicago.edu/pdf/socc16-cos.pdf">Why
                                   Does the Cloud Stop Computing?
                                   Lessons from Hundreds of Service Outages</a>,
@@ -306,7 +306,7 @@
                                 <p></p>
                             </li>
                             <li> T. Xu, X. Jin, P. Huang, Y. Zhou, S. Lu, L. Jin,
-                              S. Pasupathy,
+                              and S. Pasupathy,
                                 <a class="paperlink" href="https://www.usenix.org/system/files/conference/osdi16/osdi16-xu.pdf">Early
                                   Detection of Configuration Errors to Reduce
                                   Failure Damage</a>,
@@ -331,7 +331,7 @@
                                 <p></p>
                             </li>
                             <li> K. Nagaraja, F. Oliveira, R. Bianchini,
-                                 R. P. Martin, T. D. Nguyen,
+                                 R. P. Martin, and T. D. Nguyen,
                                 <a class="paperlink" href="http://ucare.cs.uchicago.edu/pdf/hotos17-scalabilityBugs.pdf">Understanding
                                   and Dealing with Operator Mistakes in Internet
                                   Services</a>,
@@ -398,17 +398,21 @@
                     <td class="papers">
                         <ul>
 
-                            <li> A. B. Brown and D. A. Patterson,
-                                <a class="paperlink" href="http://roc.cs.berkeley.edu/papers/brown-emailundo-usenix03.pdf">Undo for
-                                  Operators: Building an Undoable E-mail Store</a>,
-                                  In Proceedings of the 2003 USENIX Annual Technical
-                                  Conference (USENIX ATC), June 2003.
+                            <li> M. Attariyan, M. Chow, and J. Flinn,
+                                <a class="paperlink" href="https://www.usenix.org/system/files/conference/osdi12/osdi12-final-33.pdf">X-ray:
+                                  Automating Root-Cause Diagnosis of Performance
+                                  Anomalies in Production Software</a>,
+                                  In Proceedings of the 10th USENIX Symposium on
+                                  Operating Systems Design and Implementation
+                                  (OSDI), November 2012.
                                 <p></p>
                             </li>
-                            <li> K. Nagaraja, F. Oliveira, R. Bianchini, R. P. Martin, T. D. Nguyen,
-                                <a class="paperlink" href="http://ucare.cs.uchicago.edu/pdf/hotos17-scalabilityBugs.pdf">Understanding
-                                  and Dealing with Operator Mistakes in Internet Services</a>,
-                                  In Proceedings of the 6th Symposium on Operating Systems Design and Implementation (OSDI), December 2004.
+                            <li> J. Li, Y. Chen, H. Liu, S. Lu, Y. Zhang,
+                              H. S. Gunawi, X. Gu, X. Lu, and D. Lu,
+                                <a class="paperlink" href="https://people.cs.uchicago.edu/~shanlu/paper/eurosys18.pdf">PCatch:
+                                  Automatically Detecting Performance Cascading Bugs
+                                  in Cloud Systems</a>,
+                                  In Proceedings of the 2018 European Conference on Computer Systems (EuroSys), April 2018.
                             </li>
                         </ul>
                     </td>
@@ -714,7 +718,7 @@
 
                     <td class="papers">
                         <ul>
-                            <li> E. Zhai, R. Chen, D. I. Wolinsky, and Bryan Ford,
+                            <li> E. Zhai, R. Chen, D. I. Wolinsky, and B. Ford,
                                 <a class="paperlink" href="https://www.usenix.org/system/files/conference/osdi14/osdi14-paper-zhai.pdf">Heading
          Off Correlated Failures through Independence-as-a-Service</a>, In Proceedings of the 11th USENIX Symposium on Operating Systems Design and Implementation (OSDI), October 2014.
                                 <p></p>
