--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -378,7 +378,7 @@
                                   <p></p>
                             </li>
                             <li> (Optional) M. Ulrich,
-                                <a class="paperlink" href="https://landing.google.com/sre/book/chapters/addressing-cascading-failures.html">Chapter 22: Addressing
+                                <a class="paperlink" href="https://landing.google.com/sre/book/chapters/addressing-cascading-failures.html">Addressing
                                   Cascading Failures</a>,
                                   Site Reliability Engineering: How Google Runs Production Systems,
                                   O'Reilly, April 2016.
