--- a/cs598-fa18/index.html
+++ b/cs598-fa18/index.html
@@ -10,7 +10,7 @@
 
 <body class="main">
 
-    <h1>CS 598: Reliability of Cloud-Scale Systems (Fall 2018)</h1>
+    <h1>CS 598: Reliability of Cloud-Scale Systems</h1>
     <h2 class="h1sub">Fall 2018</h2>
 
     <p></p>
