--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -354,7 +354,11 @@
 
                                 <p></p>
                             </li>
-                            <li> TBD </li>
+                            <li> (Optional) P. Bailis and K. Kingsbury,
+                                <a class="paperlink" href="https://cacm.acm.org/magazines/2014/9/177925-the-network-is-reliable/abstract">The
+                                  Network Is Reliable</a>,
+                                  Communications of the ACM, Vol. 57 No. 9, Pages 48-55, September 2014.
+                            </li>
                         </ul>
                     </td>
                 </tr>
