--- a/cs598-fa18/readings.html
+++ b/cs598-fa18/readings.html
@@ -350,7 +350,7 @@
                     <td class="papers">
                         <ul>
 
-                            <li> TBD
+                            <li> <b>Guest lecture:</b> Network Storms at Facebook
 
                                 <p></p>
                             </li>
