--- a/travel.html
+++ b/travel.html
@@ -377,6 +377,7 @@ div.Section1
                                                      <li>Morro Bay, CA (2017) </li>
 						     <li>Newark, CA (2017-2018) </li>
                                                      <li>New York City, NY (2017) </li>
+						     <li>Oakland, CA (2018) </li>
                                                      <li>Pasadena, CA (2015) </li>
                                                      <li>San Diego, CA (phd, 2011-2017) </li>
                                                      <li>San Francisco, CA (too many) </li>
