--- a/travel.html
+++ b/travel.html
@@ -379,6 +379,8 @@ div.Section1
                                                      <li>New York City, NY (2017) </li>
 						     <li>Oakland, CA (2018) </li>
                                                      <li>Pasadena, CA (2015) </li>
+						     <li>Placerville, CA (2018) </li>
+						     <li>Sacramento, CA (2018) </li>
                                                      <li>San Diego, CA (phd, 2011-2017) </li>
                                                      <li>San Francisco, CA (too many) </li>
                                                      <li>San Jose, CA (too many) </li>
