--- a/travel.html
+++ b/travel.html
@@ -367,9 +367,11 @@ div.Section1
                                                      <li>Broomfield, CO (2014) </li>
                                                      <li>Carmel-by-the-Sea, CA (2017) </li>
                                                      <li>Denver, CO (2017) </li>
+						     <li>Elko, NV (2018) </li>
                                                      <li>Farmington, PA (2013) </li>
 					             <li>Fremont, CA (2017-2018) </li>
                                                      <li>Irvine, CA (2016) </li>
+						     <li>Lake Tahoe (north &amp; south), CA / NV (2018) </li>
                                                      <li>Los Angeles, CA (2012, 2016) </li>
 						     <li>Menlo Park, CA (2017-2018) </li>
 						     <li>Millbrae, CA (2018)</li>
@@ -380,6 +382,7 @@ div.Section1
 						     <li>Oakland, CA (2018) </li>
                                                      <li>Pasadena, CA (2015) </li>
 						     <li>Placerville, CA (2018) </li>
+						     <li>Reno, NV (2018) </li>
 						     <li>Sacramento, CA (2018) </li>
                                                      <li>San Diego, CA (phd, 2011-2017) </li>
                                                      <li>San Francisco, CA (too many) </li>
