--- a/index.html
+++ b/index.html
@@ -265,6 +265,10 @@ La Jolla, CA 92093-0404
 						  <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px; line-height:150%;"><span class="style121"><A name=researchint id="researchint"></A></span>
                 <b>$ echo <font color="#E84A27">"I will teach <a href="cs598-fa18", target="_blank">CS 598: Reliability of Cloud-Scale Systems</a> in Fall 2018. Checkout the <a href="cs598-fa18/readings.html", target="_blank">schedule</a>."</font></b>
                 <br>
+		<b>$ echo "Our paper on mitigating datacenter-level failures will appear at <a href="https://www.usenix.org/conference/osdi18", target="_blank">OSDI'18</a>."</b>
+                <br>
+		<b>$ echo "Our study on datacenter network reliability will appear at <a href="https://conferences.sigcomm.org/imc/2018/", target="_blank">IMC'18</a>."</b>
+		<br>
                 <b>$ echo <font color="#FA6300">"I will <a href="https://cs.illinois.edu/news/cs-illinois-welcomes-eight-new-faculty", target="_blank">join</a> CS @ UIUC as an Assistant Professor in Fall 2018."</font></b>
                 <br>
                 <b>$ echo<font color="#3b5998"> "I will be a Visiting Scientist @ Facebook's Core Systems before joining UIUC."</font></b><br> <b>$ echo<font color="#006A96"> "I will be defending my Ph.D. thesis (<a href="papers/dissertation.pdf" target="_blank">pdf</a>) on 8/29/17."</font></b> </span></TD>
