--- a/travel.html
+++ b/travel.html
@@ -383,7 +383,9 @@ div.Section1
                                                      <li>Pasadena, CA (2015) </li>
 						     <li>Placerville, CA (2018) </li>
 						     <li>Reno, NV (2018) </li>
+						     <li>Rock Springs, WY (2018) </li>
 						     <li>Sacramento, CA (2018) </li>
+						     <li>Salt Lake City, CA (2018) </li>
                                                      <li>San Diego, CA (phd, 2011-2017) </li>
                                                      <li>San Francisco, CA (too many) </li>
                                                      <li>San Jose, CA (too many) </li>
