update the road trip from Newark, CA to Urbana, IL
Day 0 (7/30) Netwark, CA -> Sacramento, CA, Sure Stay (worst motel ever)
Day 1 (7/31) Sacramento, State Capitol, California State Railroad Museum, Flaming Burger (tried blue cheese with elk) -> South Lake Tahoe, Avalon Lounge, Cook Luosifen in the fire pit
Day 2 (8/1) South Lake Tahoe, Lakeside beach, Getaway Cafe -> Emerald Bay -> North Lake Tahoe, Tahoe City, driving through King's Beach -> Sparks, NV, Nugget Casino Resort
Day 3 (8/2) Sparks -> Reno, University of Nevada at Reno, Casinos, 101 Taiwanese -> Elko, Gold Country Inn 
Day 4 (8/3) Elko (Win $75 at Gold Country Casino) -> Northeastern Nevada Museum -> Western Folklife Center ->  Chef Cheng's (Fei lost her faith in American-Chinese food)-> missed The California Trail Interpretive Center -> Carlin Tunnel -> Salt Lake City, 
Towneplace Suites (West Valley City)
Day 5 (8/4) Salt Lake City, Great Salt Lake -> the first KFC -> State Capitol -> Temple Square, Fei's sleeping -> Rock Springs, Holiday Inn
Day 6 (8/5) Rock Springs -> Laramie (Sushi in Safeway) -> Cheyenne (it's Sunday and everything is closed; but Fei managed a true horse wagon tour) -> (super heavy rain) -> ScottsBluff, Fairfield Inn & Suites
Day 7 (8/6) ScottBluff -> Mountain Rushmore -> Keystone -> Rapid City (Texas Road House) -> Custer, EconoLodge
Day 8 (8/7) Custer, Custer State Park (buffalo) -> Wind Cave National Park -> Badlands National Park, American Best Value Inn (Wall)
Day 9 (8/8) Badlands National Park -> Chamberlain (Fei sleeping, Missouri River and the Dignity statue) -> Sioux Falls, Holiday Inn ($48 only)
Day 10 (8/9) Sioux Falls, Falls -> Sioux City (HuHot Mongolian Grill) -> Omaha (Heartland of America Park and Fountain) -> Des Moines, Fairfield Inn & Suites
Day 11 (8/10) Des Moines, Pappajohn Sculpture Park, State Historical Museum, State Capitol -> Bloomington, Fairfield Inn (Normal)
Day 12 (8/11) Bloomington -> Urbana

--- a/travel.html
+++ b/travel.html
@@ -366,12 +366,17 @@ div.Section1
                                                      <li>Big Sur, CA (2017) </li>
                                                      <li>Broomfield, CO (2014) </li>
                                                      <li>Carmel-by-the-Sea, CA (2017) </li>
+						     <li>Cheyenne, WY (2018) </li>
+						     <li>Custer, SD (2018) </li>
                                                      <li>Denver, CO (2017) </li>
+						     <li>Des Moines, IA (2018) </li>
 						     <li>Elko, NV (2018) </li>
                                                      <li>Farmington, PA (2013) </li>
 					             <li>Fremont, CA (2017-2018) </li>
                                                      <li>Irvine, CA (2016) </li>
+						     <li>Keystone, SD (2018) </li>
 						     <li>Lake Tahoe (north &amp; south), CA / NV (2018) </li>
+						     <li>Laramie, WY (2018) </li>
                                                      <li>Los Angeles, CA (2012, 2016) </li>
 						     <li>Menlo Park, CA (2017-2018) </li>
 						     <li>Millbrae, CA (2018)</li>
@@ -380,8 +385,10 @@ div.Section1
 						     <li>Newark, CA (2017-2018) </li>
                                                      <li>New York City, NY (2017) </li>
 						     <li>Oakland, CA (2018) </li>
+						     <li>Omaha, NE (2018) </li>
                                                      <li>Pasadena, CA (2015) </li>
 						     <li>Placerville, CA (2018) </li>
+						     <li>Rapid City, SD (2018) </li>
 						     <li>Reno, NV (2018) </li>
 						     <li>Rock Springs, WY (2018) </li>
 						     <li>Sacramento, CA (2018) </li>
@@ -396,6 +403,8 @@ div.Section1
 						     <li>Saratoga, CA (2018) </li>
                                                      <li>Savannah, GA (2016) </li>
 						     <li>Seattle, WA (2018) </li>
+						     <li>Sioux City, IA (2018) </li>
+						     <li>Sioux Falls, SD (2018)<li>
                                                      <li>Solvang, CA (2017) </li>
                                                      <li>State College, PA (2017) </li>
                                                      <li>Sunnyvale, CA (2012, 2015) </li>
