--- a/travel.html
+++ b/travel.html
@@ -404,7 +404,7 @@ div.Section1
                                                      <li>Savannah, GA (2016) </li>
 						     <li>Seattle, WA (2018) </li>
 						     <li>Sioux City, IA (2018) </li>
-						     <li>Sioux Falls, SD (2018)<li>
+						     <li>Sioux Falls, SD (2018)</li>
                                                      <li>Solvang, CA (2017) </li>
                                                      <li>State College, PA (2017) </li>
                                                      <li>Sunnyvale, CA (2012, 2015) </li>
