incorporate indy's feedback

--- a/cs598-fa18/index.html
+++ b/cs598-fa18/index.html
@@ -35,7 +35,7 @@
         <p></p>
         <dt><b>Office Hours</b></dt>
         <dd>
-            Tu/Th 17:00–18:00pm
+            Tu/Th 17:00–18:00pm or by appointment
             <br> 4108 Siebel Center
         </dd>
         <p>
