--- a/cs598-fa18/project.html
+++ b/cs598-fa18/project.html
@@ -15,23 +15,30 @@
     <h2>Deadlines</h2>
     <ol start="0">
         <li>
-            <b><font color="red">9/5 (Wed) 8:00am:</font></b> Form project group
+            <b><font color="red">9/5 (Wed) 8:00am:</font> Form project group</b>
+            <br>
+            (send me an email about your group)
+        </li>
+        <li>
+            <b><font color="black">9/14 (Fri) 8:00am:</font> Submit project proposal (1 page) </b>
+            <br>
+            (please talk to me beforehand)
+        </li>
+        <li>
+            <b><font color="black">10/12 (Fri) 8:00am:</font> first checkpoint report (1 page) </b>
             <br>
         </li>
         <li>
-            <b><font color="black">9/14 (Fri) 8:00am:</font></b> Submit project proposal (1 page)
+            <b><font color="black">11/16 (Fri) 8:00am:</font> second checkpoint report (1 page) </b>
             <br>
-        </li>
-        <li>
-            <b><font color="black">10/12 (Fri) 8:00am:</font></b> Submit checkpoint report (1 page)
-            <br>
+            (you must include primary results)
         </li>
         <li>
             <b><font color="black">12/11 (Tue) 14:00pm:</font></b> Present your project (15 min)
             <br>
         </li>
         <li>
-            <b><font color="black">TBA:</font></b> Submit final report (6 pages max)
+            <b><font color="black">12/12 (Wed):</font></b> Submit final report (6 pages max)
             <br>
 
         </li>
@@ -39,34 +46,43 @@
 
     <h2>Reports and Code</h2>
 
-    <p>Submit your reports and code to my via email.</p>
+    <p> <b>Submission:</b> Submit your reports and code to me via email.</p>
 
     <p> <b>Proposal:</b> Your project proposal should describe what you plan to
       do, why it is interesting, how you plan to do it, and what you are not
       sure about. Also describe what resources you think you will need to carry
-      out the project. The proposal should be no longer than one page.
+      out the project (e.g., VMs, datasets).
+      The end product of the proposal is a crisp <b>problem statement</b>.
     </p>
 
-    <p> <b>Checkpoint:</b> Your checkpoint report should describe your progress
+    <p> <b>Checkpoint #1:</b> Your checkpoint report should describe your progress
       on achieving the goals you included in your proposal.
       Clearly explain any changes you have made to the goal of your project
       based on your experience so far.
-      Include examples that your prototype can already handle.
-      Provide a concrete plan of what you will need to accomplish in the
-      remaining weeks to complete your project
-      and what we can expect to see in the presentation.
+      Also, provide a concrete plan of what you will need to accomplish in the
+      remaining weeks to complete your project.
     </p>
 
-    <p> <b>Final report:</b> Your final report should be written like a research
-      paper on par with the papers read in class.
+    <p> <b>Checkpoint #2:</b> Similar as Checkpoint #1.
+      And what's more,
+      you must include primary results (e.g., small-scale measurement results,
+      examples that your prototype can already handle, etc).
+    </p>
+
+    <p> <b>Final paper:</b> Your final paper should be written like a research
+      paper you read in class.
       The report should be no longer than 6 pages.
-      Use the <a href="https://www.usenix.org/conference/osdi16/author-requirements">OSDI'16 submission format</a> for your paper.
     </p>
 
     <p> <b>Code:</b> You can host your code at GitHub or BitBucket, and send me
       the link.
       It is ok if you want to keep your code confidential,
       but please talk to me explicitly.
+    </p>
+
+    <p> <b>Paper/report format:</b> Please format you reports and papers with the
+      <a href="https://www.usenix.org/conferences/author-resources/paper-templates">new
+        USENIX paper template</a> (2019 conferences).
     </p>
 
     <h2>Project Ideas</h2>
